# autots-hex

./: IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
adapters/secondary/memory/: transformation_adapter.py
core/domain/: dataset_service.py  transformations.py  value_objects.py
ports/: dataset_port.py  transformation_port.py
tests/: test_repository_scaffold.py
tests/domain/: test_dataset_service.py  test_value_objects.py
tests/ports/: test_dataset_port.py  test_transformation_port.py
